[tool.poetry]
name = "fullschpeed"
version = "0.1.0"
description = "for the fullschpeed drivahs"
authors = ["Yannick Funk <yannick.funk@visioncheckout.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gradio = "~3.46"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
